syntax = "proto2";

import "google/protobuf/timestamp.proto";
import public "solana-storage.proto";

option go_package = "github.com/rpcpool/yellowstone-grpc/examples/golang/proto";

package geyser;

service Geyser {
  rpc Subscribe(stream SubscribeRequest) returns (stream SubscribeUpdate) {}
  rpc SubscribeReplayInfo(SubscribeReplayInfoRequest) returns (SubscribeReplayInfoResponse) {}
  rpc Ping(PingRequest) returns (PongResponse) {}
  rpc GetLatestBlockhash(GetLatestBlockhashRequest) returns (GetLatestBlockhashResponse) {}
  rpc GetBlockHeight(GetBlockHeightRequest) returns (GetBlockHeightResponse) {}
  rpc GetSlot(GetSlotRequest) returns (GetSlotResponse) {}
  rpc IsBlockhashValid(IsBlockhashValidRequest) returns (IsBlockhashValidResponse) {}
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {}
}

enum CommitmentLevel {
  PROCESSED = 0;
  CONFIRMED = 1;
  FINALIZED = 2;
}

enum SlotStatus {
  SLOT_PROCESSED = 0;
  SLOT_CONFIRMED = 1;
  SLOT_FINALIZED = 2;
  SLOT_FIRST_SHRED_RECEIVED = 3;
  SLOT_COMPLETED = 4;
  SLOT_CREATED_BANK = 5;
  SLOT_DEAD = 6;
}

message SubscribeRequest {
  map<string, SubscribeRequestFilterAccounts> accounts = 1;
  map<string, SubscribeRequestFilterSlots> slots = 2;
  map<string, SubscribeRequestFilterTransactions> transactions = 3;
  map<string, SubscribeRequestFilterTransactions> transactions_status = 10;
  map<string, SubscribeRequestFilterBlocks> blocks = 4;
  map<string, SubscribeRequestFilterBlocksMeta> blocks_meta = 5;
  map<string, SubscribeRequestFilterEntry> entry = 8;
  optional CommitmentLevel commitment = 6;
  repeated SubscribeRequestAccountsDataSlice accounts_data_slice = 7;
  optional SubscribeRequestPing ping = 9;
  optional uint64 from_slot = 11;
}

message SubscribeRequestFilterAccounts {
  repeated string account = 2;
  repeated string owner = 3;
  repeated SubscribeRequestFilterAccountsFilter filters = 4;
  optional bool nonempty_txn_signature = 5;
}

message SubscribeRequestFilterAccountsFilter {
  oneof filter {
    SubscribeRequestFilterAccountsFilterMemcmp memcmp = 1;
    uint64 datasize = 2;
    bool token_account_state = 3;
    SubscribeRequestFilterAccountsFilterLamports lamports = 4;
  }
}

message SubscribeRequestFilterAccountsFilterMemcmp {
  optional uint64 offset = 1;
  oneof data {
    bytes bytes = 2;
    string base58 = 3;
    string base64 = 4;
  }
}

message SubscribeRequestFilterAccountsFilterLamports {
  oneof cmp {
    uint64 eq = 1;
    uint64 ne = 2;
    uint64 lt = 3;
    uint64 gt = 4;
  }
}

message SubscribeRequestFilterSlots {
  optional bool filter_by_commitment = 1;
  optional bool interslot_updates = 2;
}

message SubscribeRequestFilterTransactions {
  optional bool vote = 1;
  optional bool failed = 2;
  optional string signature = 5;
  repeated string account_include = 3;
  repeated string account_exclude = 4;
  repeated string account_required = 6;
}

message SubscribeRequestFilterBlocks {
  repeated string account_include = 1;
  optional bool include_transactions = 2;
  optional bool include_accounts = 3;
  optional bool include_entries = 4;
}

message SubscribeRequestFilterBlocksMeta {}

message SubscribeRequestFilterEntry {}

message SubscribeRequestAccountsDataSlice {
  optional uint64 offset = 1;
  optional uint64 length = 2;
}

message SubscribeRequestPing {
  optional int32 id = 1;
}

message SubscribeUpdate {
  repeated string filters = 1;
  oneof update_oneof {
    SubscribeUpdateAccount account = 2;
    SubscribeUpdateSlot slot = 3;
    SubscribeUpdateTransaction transaction = 4;
    SubscribeUpdateTransactionStatus transaction_status = 10;
    SubscribeUpdateBlock block = 5;
    SubscribeUpdatePing ping = 6;
    SubscribeUpdatePong pong = 9;
    SubscribeUpdateBlockMeta block_meta = 7;
    SubscribeUpdateEntry entry = 8;
  }
  optional google.protobuf.Timestamp created_at = 11;
}

message SubscribeUpdateAccount {
  optional SubscribeUpdateAccountInfo account = 1;
  optional uint64 slot = 2;
  optional bool is_startup = 3;
}

message SubscribeUpdateAccountInfo {
  optional bytes pubkey = 1;
  optional uint64 lamports = 2;
  optional bytes owner = 3;
  optional bool executable = 4;
  optional uint64 rent_epoch = 5;
  optional bytes data = 6;
  optional uint64 write_version = 7;
  optional bytes txn_signature = 8;
}

message SubscribeUpdateSlot {
  optional uint64 slot = 1;
  optional uint64 parent = 2;
  optional SlotStatus status = 3;
  optional string dead_error = 4;
}

message SubscribeUpdateTransaction {
  optional SubscribeUpdateTransactionInfo transaction = 1;
  optional uint64 slot = 2;
}

message SubscribeUpdateTransactionInfo {
  optional bytes signature = 1;
  optional bool is_vote = 2;
  optional solana.storage.ConfirmedBlock.Transaction transaction = 3;
  optional solana.storage.ConfirmedBlock.TransactionStatusMeta meta = 4;
  optional uint64 index = 5;
}

message SubscribeUpdateTransactionStatus {
  optional uint64 slot = 1;
  optional bytes signature = 2;
  optional bool is_vote = 3;
  optional uint64 index = 4;
  optional solana.storage.ConfirmedBlock.TransactionError err = 5;
}

message SubscribeUpdateBlock {
  optional uint64 slot = 1;
  optional string blockhash = 2;
  optional solana.storage.ConfirmedBlock.Rewards rewards = 3;
  optional solana.storage.ConfirmedBlock.UnixTimestamp block_time = 4;
  optional solana.storage.ConfirmedBlock.BlockHeight block_height = 5;
  optional uint64 parent_slot = 7;
  optional string parent_blockhash = 8;
  optional uint64 executed_transaction_count = 9;
  repeated SubscribeUpdateTransactionInfo transactions = 6;
  optional uint64 updated_account_count = 10;
  repeated SubscribeUpdateAccountInfo accounts = 11;
  optional uint64 entries_count = 12;
  repeated SubscribeUpdateEntry entries = 13;
}

message SubscribeUpdateBlockMeta {
  optional uint64 slot = 1;
  optional string blockhash = 2;
  optional solana.storage.ConfirmedBlock.Rewards rewards = 3;
  optional solana.storage.ConfirmedBlock.UnixTimestamp block_time = 4;
  optional solana.storage.ConfirmedBlock.BlockHeight block_height = 5;
  optional uint64 parent_slot = 6;
  optional string parent_blockhash = 7;
  optional uint64 executed_transaction_count = 8;
  optional uint64 entries_count = 9;
}

message SubscribeUpdateEntry {
  optional uint64 slot = 1;
  optional uint64 index = 2;
  optional uint64 num_hashes = 3;
  optional bytes hash = 4;
  optional uint64 executed_transaction_count = 5;
  optional uint64 starting_transaction_index = 6; // added in v1.18, for solana 1.17 value is always 0
}

message SubscribeUpdatePing {}

message SubscribeUpdatePong {
  optional int32 id = 1;
}

// non-streaming methods

message SubscribeReplayInfoRequest {}

message SubscribeReplayInfoResponse {
  optional uint64 first_available = 1;
}

message PingRequest {
  optional int32 count = 1;
}

message PongResponse {
  optional int32 count = 1;
}

message GetLatestBlockhashRequest {
  optional CommitmentLevel commitment = 1;
}

message GetLatestBlockhashResponse {
  optional uint64 slot = 1;
  optional string blockhash = 2;
  optional uint64 last_valid_block_height = 3;
}

message GetBlockHeightRequest {
  optional CommitmentLevel commitment = 1;
}

message GetBlockHeightResponse {
  optional uint64 block_height = 1;
}

message GetSlotRequest {
  optional CommitmentLevel commitment = 1;
}

message GetSlotResponse {
  optional uint64 slot = 1;
}

message GetVersionRequest {}

message GetVersionResponse {
  optional string version = 1;
}

message IsBlockhashValidRequest {
  optional string blockhash = 1;
  optional CommitmentLevel commitment = 2;
}

message IsBlockhashValidResponse {
  optional uint64 slot = 1;
  optional bool valid = 2;
}
