syntax = "proto2";

package solana.storage.ConfirmedBlock;

option go_package = "github.com/rpcpool/yellowstone-grpc/examples/golang/proto";

message ConfirmedBlock {
    optional string previous_blockhash = 1;
    optional string blockhash = 2;
    optional uint64 parent_slot = 3;
    repeated ConfirmedTransaction transactions = 4;
    repeated Reward rewards = 5;
    optional UnixTimestamp block_time = 6;
    optional BlockHeight block_height = 7;
    optional NumPartitions num_partitions = 8;
}

message ConfirmedTransaction {
    optional Transaction transaction = 1;
    optional TransactionStatusMeta meta = 2;
}

message Transaction {
    repeated bytes signatures = 1;
    optional Message message = 2;
}

message Message {
    optional MessageHeader header = 1;
    repeated bytes account_keys = 2;
    optional bytes recent_blockhash = 3;
    repeated CompiledInstruction instructions = 4;
    optional bool versioned = 5;
    repeated MessageAddressTableLookup address_table_lookups = 6;
}

message MessageHeader {
    optional uint32 num_required_signatures = 1;
    optional uint32 num_readonly_signed_accounts = 2;
    optional uint32 num_readonly_unsigned_accounts = 3;
}

message MessageAddressTableLookup {
    optional bytes account_key = 1;
    optional bytes writable_indexes = 2;
    optional bytes readonly_indexes = 3;
}

message TransactionStatusMeta {
    optional TransactionError err = 1;
    optional uint64 fee = 2;
    repeated uint64 pre_balances = 3;
    repeated uint64 post_balances = 4;
    repeated InnerInstructions inner_instructions = 5;
    optional bool inner_instructions_none = 10;
    repeated string log_messages = 6;
    optional bool log_messages_none = 11;
    repeated TokenBalance pre_token_balances = 7;
    repeated TokenBalance post_token_balances = 8;
    repeated Reward rewards = 9;
    repeated bytes loaded_writable_addresses = 12;
    repeated bytes loaded_readonly_addresses = 13;
    optional ReturnData return_data = 14;
    optional bool return_data_none = 15;

    // Sum of compute units consumed by all instructions.
    // Available since Solana v1.10.35 / v1.11.6.
    // Set to `None` for txs executed on earlier versions.
    optional uint64 compute_units_consumed = 16;
    // Total transaction cost
    optional uint64 cost_units = 17;
}

message TransactionError {
    optional bytes err = 1;
}

message InnerInstructions {
    optional uint32 index = 1;
    repeated InnerInstruction instructions = 2;
}

message InnerInstruction {
    optional uint32 program_id_index = 1;
    optional bytes accounts = 2;
    optional bytes data = 3;

    // Invocation stack height of an inner instruction.
    // Available since Solana v1.14.6
    // Set to `None` for txs executed on earlier versions.
    optional uint32 stack_height = 4;
}

message CompiledInstruction {
    optional uint32 program_id_index = 1;
    optional bytes accounts = 2;
    optional bytes data = 3;
}

message TokenBalance {
    optional uint32 account_index = 1;
    optional string mint = 2;
    optional UiTokenAmount ui_token_amount = 3;
    optional string owner = 4;
    optional string program_id = 5;
}

message UiTokenAmount {
    optional double ui_amount = 1;
    optional uint32 decimals = 2;
    optional string amount = 3;
    optional string ui_amount_string = 4;
}

message ReturnData {
    optional bytes program_id = 1;
    optional bytes data = 2;
}

enum RewardType {
    Unspecified = 0;
    Fee = 1;
    Rent = 2;
    Staking = 3;
    Voting = 4;
}

message Reward {
    optional string pubkey = 1;
    optional int64 lamports = 2;
    optional uint64 post_balance = 3;
    optional RewardType reward_type = 4;
    optional string commission = 5;
}

message Rewards {
  repeated Reward rewards = 1;
  optional NumPartitions num_partitions = 2;
}

message UnixTimestamp {
    optional int64 timestamp = 1;
}

message BlockHeight {
    optional uint64 block_height = 1;
}

message NumPartitions {
    optional uint64 num_partitions = 1;
}
